# college-predictor_0.1

./: .env.example  .gitignore  README.md  app.py  build.sh  debug_database.py  gunicorn_config.py  model.pkl  model_training.py  render.yaml  requirements.txt  setup.cfg  setup.py
database/: college_data.db  init_db.py
datasets/: mba_colleges_data.csv  mca_colleges_data.csv  mtech_colleges_data.csv
static/css/: auth.css  chatbot.css  dashboard.css  main.css  prediction.css
static/js/: app.js  auth.js  chatbot.js  prediction.js
templates/: 404.html  500.html  dashboard.html  index.html  layout.html  login.html  prediction.html  register.html  results.html
