[metadata]
name = college-predictor
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = AI-powered college prediction system for Karnataka PGCET
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/college-predictor
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    flask>=2.3.3
    flask-sqlalchemy>=3.0.5
    flask-login>=0.6.3
    werkzeug>=2.3.7
    pandas>=2.0.3
    numpy>=1.24.3
    scikit-learn>=1.3.0
    joblib>=1.3.2

[options.packages.find]
where = .
include = *
exclude =
    tests
    tests.*
    *.test
    *.test.*

[options.entry_points]
console_scripts =
    college-predictor = app:main